@@ -1,3 +1,6 @@
+01/17/2010
+- bugfix on $smarty.const... in double quoted strings
+
 01/16/2010
 - internal change of config file lexer/parser on handling of section names
 - bugfix on registered objects (format parameter of register_object was not handled correctly)
